Correctly wrap the load icon to login box

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,7 +61,7 @@ body, .container-fluid {
 
   .form-signin {
   max-width: 330px;
-  padding: 15px;
+  /*padding: 15px;*/
   margin: 0 auto;
 }
 .form-signin .form-signin-heading,
